ISTO-81 Transform error and logging improvements