@@ -1,12 +1,12 @@
 package org.snomed.snowstorm.core.data.services.postcoordination;
 
+import ch.qos.logback.classic.Level;
 import org.snomed.languages.scg.domain.model.Attribute;
 import org.snomed.languages.scg.domain.model.AttributeGroup;
 import org.snomed.languages.scg.domain.model.AttributeValue;
 import org.snomed.languages.scg.domain.model.Expression;
 import org.snomed.snowstorm.core.data.domain.ConceptMini;
 import org.snomed.snowstorm.core.data.services.ConceptService;
-import org.snomed.snowstorm.core.data.services.NotFoundException;
 import org.snomed.snowstorm.core.data.services.ServiceException;
 import org.snomed.snowstorm.core.data.services.postcoordination.model.ComparableExpression;
 import org.snomed.snowstorm.core.util.TimerUtil;
@@ -42,7 +42,7 @@ public class ExpressionMRCMValidationService {
 	public void attributeDomainValidation(ComparableExpression expression, ExpressionContext context) throws ServiceException {
 		List<Attribute> allAttributes = new ArrayList<>();
 		allAttributes.addAll(orEmpty(expression.getAttributes()));
-		allAttributes.addAll(orEmpty(expression.getAttributeGroups()).stream().flatMap(group -> group.getAttributes().stream()).collect(Collectors.toList()));
+		allAttributes.addAll(orEmpty(expression.getAttributeGroups()).stream().flatMap(group -> group.getAttributes().stream()).toList());
 		if (!allAttributes.isEmpty()) {
 			// Fetch attribute domains
 			Set<Long> focusConceptIds = expression.getFocusConcepts().stream().map(Long::parseLong).collect(Collectors.toSet());
@@ -52,13 +52,14 @@ public class ExpressionMRCMValidationService {
 				if (!validAttributesForDomain.contains(usedAttribute.getAttributeId())) {
 					// Attribute used in wrong domain
 					// Report correct domains in error message
-					Set<String> validDomains = context.getBranchMRCM().getAttributeDomains().stream()
+					Set<String> validDomains = context.getBranchMRCM().attributeDomains().stream()
 							.filter(attributeDomain -> attributeDomain.getReferencedComponentId().equals(usedAttribute.getAttributeId()))
 							.map(AttributeDomain::getDomainId)
 							.collect(Collectors.toSet());
 					List<String> validDomainsForUsedAttribute = conceptService.findConceptMinis(context.getBranchCriteria(), validDomains, DEFAULT_LANGUAGE_DIALECTS)
-							.getResultsMap().values().stream().map(ConceptMini::getIdAndFsnTerm).collect(Collectors.toList());
-					throw new IllegalArgumentException(format("Attribute Type %s can not be used with the given focus concepts %s because the attribute can only be used " +
+							.getResultsMap().values().stream().map(ConceptMini::
+									getIdAndFsnTerm).collect(Collectors.toList());
+					throw new ExpressionValidationException(format("Attribute Type %s can not be used with the given focus concepts %s because the attribute can only be used " +
 							"in the following MRCM domains: %s.", usedAttribute.getAttributeId(), focusConceptIds, validDomainsForUsedAttribute));
 				}
 			}
@@ -66,7 +67,7 @@ public class ExpressionMRCMValidationService {
 
 		// Also validate nested expressions
 		List<ComparableExpression> nestedExpressions = allAttributes.stream().filter(attribute -> attribute.getAttributeValue().isNested())
-				.map(attribute -> (ComparableExpression) attribute.getAttributeValue().getNestedExpression()).collect(Collectors.toList());
+				.map(attribute -> (ComparableExpression) attribute.getAttributeValue().getNestedExpression()).toList();
 		for (ComparableExpression nestedExpression : nestedExpressions) {
 			attributeDomainValidation(nestedExpression, context);
 		}
@@ -100,7 +101,7 @@ public class ExpressionMRCMValidationService {
 			// Active attribute exists in MRCM
 			if (!attributeDomainAttributeIds.contains(attributeId)) {
 				Map<String, String> conceptIdAndFsnTerm = getConceptIdAndTerm(Collections.singleton(attributeId), context);
-				throw new IllegalArgumentException(format("Attribute %s is not found in the MRCM rules.", conceptIdAndFsnTerm.get(attributeId)));
+				throw new ExpressionValidationException(format("Attribute %s is not found in the MRCM rules.", conceptIdAndFsnTerm.get(attributeId)));
 			}
 			AttributeValue attributeValue = attribute.getAttributeValue();
 			if (!attributeValue.isNested()) {
@@ -116,7 +117,7 @@ public class ExpressionMRCMValidationService {
 
 	private void assertAttributeValueWithinRange(String attributeId, String attributeValueId, ExpressionContext context) throws ServiceException {
 		// Value within attribute range
-		TimerUtil timer = new TimerUtil("attribute validation");
+		TimerUtil timer = new TimerUtil("attribute validation", Level.INFO, 5);
 		Collection<Long> longs = mrcmService.retrieveAttributeValueIds(CONTENT_TYPE, attributeId, attributeValueId,
 				context.getBranch(), null, context.getBranchMRCM(), context.getMRCMBranchCriteria());
 		timer.checkpoint("retrieveAttributeValueIds");
@@ -137,7 +138,7 @@ public class ExpressionMRCMValidationService {
 		context.getTimer().checkpoint("retrieveAttributeValues for " + attributeId + " = " + attributeValueId);
 	}
 
-	static void throwAttributeRangeError(String attributeId, Map<String, String> conceptIdAndFsnTerm, String attributeValueFromStore, Set<AttributeRange> mandatoryAttributeRanges) {
+	static void throwAttributeRangeError(String attributeId, Map<String, String> conceptIdAndFsnTerm, String attributeValueFromStore, Set<AttributeRange> mandatoryAttributeRanges) throws ExpressionValidationException {
 		StringBuilder buffer = new StringBuilder();
 		for (AttributeRange mandatoryAttributeRange : mandatoryAttributeRanges) {
 			if (!buffer.isEmpty()) {
@@ -145,7 +146,7 @@ public class ExpressionMRCMValidationService {
 			}
 			buffer.append("(").append(mandatoryAttributeRange.getRangeConstraint()).append(")");
 		}
-		throw new IllegalArgumentException(format("Value %s is not within the permitted range of attribute %s - %s.",
+		throw new ExpressionValidationException(format("Value %s is not within the permitted range of attribute %s - %s.",
 				attributeValueFromStore, conceptIdAndFsnTerm.get(attributeId), buffer));
 	}
 
@@ -154,7 +155,7 @@ public class ExpressionMRCMValidationService {
 		return resultsMap.values().stream().collect(Collectors.toMap(ConceptMini::getConceptId, ConceptMini::getIdAndFsnTerm));
 	}
 
-	private void throwConceptNotFound(String concept) {
-		throw new NotFoundException(format("Concept %s not found on this branch.", concept));
+	private void throwConceptNotFound(String concept) throws ExpressionValidationException {
+		throw new ExpressionValidationException(format("Concept %s not found on this branch.", concept));
 	}
 }
